--- a/index.html
+++ b/index.html
@@ -4,44 +4,139 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
-  <header>
-    <h1>Your Name</h1>
-    <p>Beginner Web Developer</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Hi! I'm learning how to build websites. I enjoy creating simple, clean, and responsive designs. I'm currently focused on improving my HTML, CSS, and JavaScript skills.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>My First Website</h3>
-      <p>A simple webpage I built using just HTML and CSS.</p>
+  <!-- Logo and Navigation -->
+  <nav>
+    <div class="container">
+      <img src="assets/LOGO.jpg" alt="M M Logo" class="logo">
+      <ul>
+        <li>
+          <a href="#home">home</a>
+        </li>
+        <li>
+          <a href="#about">about</a>
+        </li>
+        <li>
+          <a href="#work">work</a>
+        </li>
+        <li>
+          <a href="#contact">contact</a>
+        </li>
+      </ul>
     </div>
-    <div class="project">
-      <h3>To-Do List App</h3>
-      <p>A basic JavaScript to-do app where users can add and remove tasks.</p>
+  </nav>
+
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <div class="container">
+      <h1>mercedes mendez</h1>
+      <h2>a developer and designer who loves to weave engaging stories with human-centered design solutions to craft mindful and impactful digital experiences.</h2>
+      <p>UX Designer | Application Developer | Storyteller</p>
+      <a href="#work" class="button">view my work</a>
     </div>
   </section>
+    
+  <!-- About Me -->
+  <section id="about" class="about">
+    <div class="container">
+      <div class="about-content">
+        <img src="assets/AboutMePolaroid.png" alt="Profile Image">
+        <div class="text">
+          <h2>about me</h2>
+          <p>Hi, I’m Mercedes (she/her)! My passion for people and their experiences blossomed while studying Anthropology. In my previous work, I focused on empathizing with and understanding the people around me. My journey into UX design began when I noticed that community members struggled to complete a questionnaire during vaccine outreach, and I discovered that poor design was the culprit. Since then, I’ve been driven to bridge the gap by designing inclusive, intuitive, and ethical products. I love design not only for its creative aspect but for how it can improve the lives of others. I am also in the process of learning some dev tools! When I’m not weaving together design and code to create thoughtful digital experiences, I’m either nurturing native plants or exploring new spots for the perfect latte.
+          </p>
+          <div class="skills">
+                        <span>HTML/CSS</span>
+                        <span>JavaScript</span>
+                        <span>Figma</span>
+                        <span>Illustration</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+  <!-- Work Section -->
+<section id="work" class="work">
+  <div class="container">
+    <h2>work</h2>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>You can reach me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <!-- Design Work -->
+    <h3>design</h3>
+    <div class="work-grid">
+      <div class="work-card">
+        <img src="assets/FareWellCard.png" alt="Farewell Image">
+        <h4>Travel and Wellness Website - UX/UI Design</h4>
+      </div>
+      <div class="work-card">
+        <img src="assets/ExtremeCycleCard.png" alt="Extreme Cycle Image">
+        <h4>Cycling E-commerce Website - UI Design</h4>
+      </div>
+      <div class="work-card">
+        <img src="assets/A11YCard.png" alt="A11Y Image">
+        <h4>Accessibility Course - LXD</h4>
+      </div>
+      <div class="work-card">
+        <img src="assets/ANewCard.png" alt="ANew Behavior Health Image">
+        <h4>Company Video - Ideation and Illustration</h4>
+      </div>
+    </div>
+
+    <!-- Dev Work -->
+    <h3>dev</h3>
+    <div class="work-grid">
+      <div class="work-card">
+        <img src="assets/ExtremeCycleCard.png" alt="Extreme Cycle Image">
+        <h4>Full-stack Online Cycling Shop with MongoDB, Express, React</h4>
+      </div>
+      <div class="work-card">
+        <img src="assets/BookstoreAppCard.png" alt="Bookstore App Image">
+        <h4>Bookstore App - API and JavaScript</h4>
+      </div>
+      <div class="work-card">
+        <img src="assets/WeatherAppCard.png" alt="Weather Application Image">
+        <h4>Weather App - Weather API and React</h4>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+  <section id="contact" class="contact">
+    <div class="container">
+      <h2>Let's create together!</h2>
+      <form>
+        <input type="text" placeholder="Prefered name" required>
+        <input type="email" placeholder="Email" required>
+        <textarea placeholder="Your message" required></textarea>
+        <button type="submit" class="button">Send</button>
+      </form>
+    </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
-  </footer>
+  <div class="container">
+    <div class="social-links">
+      <a href="https://www.linkedin.com/in/mercedesamendez" target="_blank" rel="noopener">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/mercedesamendez" target="_blank" rel="noopener">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="mailto:mercedes@email.com">
+        <i class="fas fa-envelope"></i>
+      </a>
+    </div>
+    <p>&copy; 2025 Mercedes Mendez. All rights reserved.</p>
+  </div>
+</footer>
 
 </body>
 </html>
